hidden / visible fixed

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -13,3 +13,7 @@ html {
 .hidden {
   display: none;
 }
+
+.invisible {
+  visibility: hidden;
+}
